--- a/PECLGalindoMartinezNoelia.project
+++ b/PECLGalindoMartinezNoelia.project
@@ -94,9 +94,15 @@
   </Settings>
   <VirtualDirectory Name="src">
     <VirtualDirectory Name="Source Files">
+      <File Name="Pila.cpp"/>
+      <File Name="NodoPila.cpp"/>
+      <File Name="NodoCola.cpp"/>
       <File Name="Cola.cpp"/>
     </VirtualDirectory>
     <VirtualDirectory Name="Header Files">
+      <File Name="Pila.hpp"/>
+      <File Name="NodoPila.hpp"/>
+      <File Name="NodoCola.hpp"/>
       <File Name="Cola.hpp"/>
     </VirtualDirectory>
     <File Name="main.cpp"/>
