--- a/PECLGalindoMartinezNoelia.project
+++ b/PECLGalindoMartinezNoelia.project
@@ -94,12 +94,24 @@
   </Settings>
   <VirtualDirectory Name="src">
     <VirtualDirectory Name="Source Files">
+      <File Name="Pedido.cpp"/>
+      <File Name="NodoLista.cpp"/>
+      <File Name="NodoArbol.cpp"/>
+      <File Name="Lista.cpp"/>
+      <File Name="Gestor.cpp"/>
+      <File Name="Arbol.cpp"/>
       <File Name="Pila.cpp"/>
       <File Name="NodoPila.cpp"/>
       <File Name="NodoCola.cpp"/>
       <File Name="Cola.cpp"/>
     </VirtualDirectory>
     <VirtualDirectory Name="Header Files">
+      <File Name="Pedido.hpp"/>
+      <File Name="NodoLista.hpp"/>
+      <File Name="NodoArbol.hpp"/>
+      <File Name="Lista.hpp"/>
+      <File Name="Gestor.hpp"/>
+      <File Name="Arbol.hpp"/>
       <File Name="Pila.hpp"/>
       <File Name="NodoPila.hpp"/>
       <File Name="NodoCola.hpp"/>
